test/semantic_errors/invalid_binaryop2.mc
void main() {
    bool res;
    bool a;
    int b;
    res = a < b;
}